--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ __pycache__/captcha.cpython-36.pyc
 __pycache__/db.cpython-36.pyc
 __pycache__/dx.cpython-36.pyc
 __pycache__/ua.cpython-36.pyc
+isbn.csv
+training/opac.box.bak
+training/opac.opac.exp0.box
